# internal/upload/model.go
@@ -1,1 +1,6 @@
-package uploadimage
+package upload
+
+// レスポンス
+type UploadImagesResponse struct {
+	Urls []string `json:"urls"`
+}
